Set front-end web server port away from Kestrel's default 5000.

--- a/XRayFrontWeb/appsettings.Development.json
+++ b/XRayFrontWeb/appsettings.Development.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+	"Kestrel": {
+		"Endpoints": {
+			"Http": {
+				"Url": "http://*:8081"
+			}
+		}
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	}
 }
