Add controller to return image file from S3 bucket.

--- a/XRayFrontWeb/appsettings.json
+++ b/XRayFrontWeb/appsettings.json
@@ -14,6 +14,13 @@
 		}
 	},
 	"AllowedHosts": "*",
+	"Aws": {
+		"Account": "",
+		"Region": "",
+		"AccessKeyId": "",
+		"SecretAccessKey": "",
+		"S3Bucket": ""
+	},
 	"XRay": {
 		"AWSXRayPlugins": "EC2Plugin"
 	}
