--- a/XRayFrontWeb/XRayFrontWeb.csproj
+++ b/XRayFrontWeb/XRayFrontWeb.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.3.15" />
     <PackageReference Include="AWSXRayRecorder" Version="2.10.1" />
   </ItemGroup>
 
