--- a/XRayBackApi/appsettings.json
+++ b/XRayBackApi/appsettings.json
@@ -2,7 +2,7 @@
 	"Kestrel": {
 		"Endpoints": {
 			"Http": {
-				"Url": "http://*:8080"
+				"Url": "http://*:82"
 			}
 		}
 	},
@@ -12,5 +12,6 @@
 			"Microsoft": "Warning",
 			"Microsoft.Hosting.Lifetime": "Information"
 		}
-	}
+	},
+	"AllowedHosts": "*"
 }
