XRayBackApi to use port 81/8081 after front-end web app.

--- a/XRayBackApi/appsettings.json
+++ b/XRayBackApi/appsettings.json
@@ -2,7 +2,7 @@
 	"Kestrel": {
 		"Endpoints": {
 			"Http": {
-				"Url": "http://*:82"
+				"Url": "http://*:81"
 			}
 		}
 	},
@@ -13,5 +13,12 @@
 			"Microsoft.Hosting.Lifetime": "Information"
 		}
 	},
-	"AllowedHosts": "*"
+	"AllowedHosts": "*",
+	"Aws": {
+		"Account": "",
+		"Region": "",
+		"AccessKeyId": "",
+		"SecretAccessKey": "",
+		"S3Bucket": ""
+	}
 }
