Let front-end web tier make request to back-end API tier.

--- a/XRayFrontWeb/appsettings.json
+++ b/XRayFrontWeb/appsettings.json
@@ -21,6 +21,9 @@
 		"SecretAccessKey": "",
 		"S3Bucket": ""
 	},
+	"ApiLayer": {
+		"Host": ""
+	},
 	"XRay": {
 		"AWSXRayPlugins": "EC2Plugin"
 	}
