--- a/XRayFrontWeb/appsettings.Development.json
+++ b/XRayFrontWeb/appsettings.Development.json
@@ -12,5 +12,8 @@
 			"Microsoft": "Warning",
 			"Microsoft.Hosting.Lifetime": "Information"
 		}
+	},
+	"ApiLayer": {
+		"Host":  "localhost:8081"
 	}
 }
