Additional configuration for annotating X-Ray traces with system-level name for easier filtering and grouping.

--- a/XRayBackApi/appsettings.json
+++ b/XRayBackApi/appsettings.json
@@ -19,6 +19,10 @@
 		"Region": "",
 		"AccessKeyId": "",
 		"SecretAccessKey": "",
-		"S3Bucket": ""
+		"S3Bucket": "",
+		"XRay": {
+			"System": "XRaySampleSystem",
+			"AppSegment":  "XRayBackApi"
+		}
 	}
 }
