Apply system annotation for front-end web tier as well.

--- a/XRayFrontWeb/appsettings.json
+++ b/XRayFrontWeb/appsettings.json
@@ -19,7 +19,11 @@
 		"Region": "",
 		"AccessKeyId": "",
 		"SecretAccessKey": "",
-		"S3Bucket": ""
+		"S3Bucket": "",
+		"XRay": {
+			"System": "XRaySampleSystem",
+			"AppSegment": "XRayBackApi"
+		}
 	},
 	"ApiLayer": {
 		"Host": "localhost:81"
