Revise front-end web app service name.

--- a/XRayFrontWeb/appsettings.json
+++ b/XRayFrontWeb/appsettings.json
@@ -22,7 +22,7 @@
 		"S3Bucket": "",
 		"XRay": {
 			"System": "XRaySampleSystem",
-			"AppSegment": "XRayBackApi"
+			"AppSegment": "XRayFrontWeb"
 		}
 	},
 	"ApiLayer": {
